added sql runner

--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ PGADMIN_PORT=5050
 
 # API
 API_PORT=8000
-DATABASE_URL=postgresql://appuser:apppassword@db:5432/appdb
+#DATABASE_URL=postgresql://appuser:apppassword@db:5433/appdb
+DATABASE_URL=postgresql://appuser:apppassword@localhost:5433/appdb # for local dev
